--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 
         resource.qrc
         backend.h backend.cpp
+        resources/qdarkstyle/dark/style.qrc
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Payday2Launcher APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
